# OS-CityManager

./: CMakeLists.txt  README.md
city_manager_phase1/: Makefile  ai_usage.md  city_manager.c  city_manager.h  file_io.c  filter.c  main.c  operations.c  permissions.c  report_structs.h
city_manager_phase1/file_io/: file_io.c  file_io.h
city_manager_phase1/filter/: filter_logic.c  filter_logic.h
city_manager_phase1/operations/: operations.c  operations.h
city_manager_phase1/permissions/: permissions.c  permissions.h
